--- a/index.html
+++ b/index.html
@@ -425,6 +425,39 @@
         </div>
       </div>
      </section>
+
+     <!-- stats section -->
+      <section class="stats section" id="stats">
+        <div class="container stats-flex">
+          <img src="Images/images/stats.png" alt="stats">
+          <div class="stats-content">
+            <div class="stats-numbers">
+              <div>
+                <h3>2000+</h3>
+                <p>Happy Users</p>
+              </div>
+              <div>
+                <h3>358+</h3>
+                <p>Issues solved</p>
+              </div>
+              <div>
+                <h3>980</h3>
+                <p>Good Reviews</p>
+              </div>
+              <div>
+                <h3>216</h3>
+                <p>Case Studies</p>
+              </div>
+            </div>
+
+            <p class="stats-text">
+              Tutor is probably one of the best video courses on landing page making in the web industry
+            </p>
+            <a href="#" class="btn">Get The Course</a>
+          </div>
+        </div>
+      </section>
+
   <script src="js/script.js"></script>
 </body>
 </html>
