--- a/index.html
+++ b/index.html
@@ -458,6 +458,49 @@
         </div>
       </section>
 
+      <!-- newsletter-->
+       <section class="newsletter section" id="newsletter">
+        <div class="container newsletter-flex">
+          <h2>Subscribe To Our Newsletter</h2>
+          <p>
+            Stay updated with the latest news, offers, and insights from our platform.
+          </p>
+          <form>
+            <input type="email" name="email" id="email" placeholder="Johnjelq@gmail.com">
+            <button class="btn" type="submit">Subscribe</button>
+          </form>
+        </div>
+       </section>
+
+       <!-- social -->
+        <section class="social section">
+          <div class="container">
+            <p>
+              Follow us on social media for updates and news about our courses.
+            </p>
+            <div class="social-icons">
+              <a href="#"> <i class="fa-brands fa-facebook fa-2x"></i></a>
+              <a href="#"> <i class="fa-brands fa-x-twitter fa-2x"></i></a>
+              <a href="#"> <i class="fa-brands fa-instagram fa-2x"></i></a>
+              <a href="#"> <i class="fa-brands fa-linkedin fa-2x"></i></a>
+              <a href="#"> <i class="fa-brands fa-youtube fa-2x"></i></a>
+              <a href="#"> <i class="fa-brands fa-pinterest fa-2x"></i></a>
+            </div>
+          </div>
+        </section>
+
+        <footer class="footer">
+          <div class="container footer-flex">
+            <ul class="footer-links">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Terms</a></li>
+              <li><a href="#">Privacy</a></li>
+              <li><a href="contact.html">Contact</a></li>
+            </ul>
+            <p>&copy; 2024 - 2025 Tutor. All rights reserved</p>
+          </div>
+        </footer>
+
   <script src="js/script.js"></script>
 </body>
 </html>
